--- a/colour-picker.css
+++ b/colour-picker.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: #fff;
+  color:white;
 }
 
 body {
@@ -82,22 +82,14 @@ body {
   padding: 5px;
 }
 
-.hex-code {
-  font-size: 1.2em;
-  padding: 20px;
-  font-family: 'Josefin Sans';
-  font-style: normal;
-  font-weight: 400;
-}
-
-
 .icon {
   height: 1em;
   width: 1em;
   cursor: pointer;
   background: none;
   border: none;
-  padding: 20px;
+  margin: 20px;
+  padding: 5px;
   transition: 100ms;
   position:relative;
   transform: scale(1.5);
@@ -106,6 +98,17 @@ body {
 .icon:hover {
   transform: scale(2);
 }
+
+.hex-code {
+  font-size: 1.2em;
+  padding: 20px;
+  margin:10px;
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 
 .tooltip {
   position: absolute;
