--- a/colour-picker.css
+++ b/colour-picker.css
@@ -23,7 +23,13 @@ body {
   text-align: center;
   font-size: 1.3em;
   padding: 15px 0;
+}
 
+.sub-header {
+  text-align: center;
+  max-height: 5em;
+  font-size: 1em;
+  padding: 5px 0;
 }
 
 .title {
@@ -34,6 +40,23 @@ body {
   color: rgb(0,0,0);
 }
 
+.button {
+  background-color: black;
+  opacity: 1;
+  border: none;
+  border-radius: 0.5em;
+  color: white;
+  padding: 1em;
+  text-align: center;
+  font-size: 1em;
+  margin-bottom: 2em;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  justify-content: right;
+}
+
 .start-button {
   background-color: black;
   width: 40vw;
@@ -41,9 +64,9 @@ body {
   border: none;
   border-radius: 0.5em;
   color: white;
-  padding: 1em 2em;
+  padding: 1em;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 1em;
   margin-bottom: 2em;
   transition: 0.3s;
   display: inline-block;
@@ -132,6 +155,59 @@ body {
   right: 30%;
 
 }
+
+
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+#myInput {
+  box-sizing: border-box;
+  background-image: url('searchicon.png');
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {outline: 3px solid #ddd;}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
 
 /* media queries */
 @media all and (max-width: 800px){
